WIP H3 - Add tests for H3.2